[project]
name = "grok-ceo"
version = "0.1.0"
description = "GROK-CEO Weekend Shockwave v1.0 - Hardened autonomous CEO agent with LangGraph OODA, Mesa simulation, ZeroTrust sandbox, and production foundations."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "James Ryan Taylor", email = "jam3sryantaylor@x.ai"}]
dependencies = [
  "langgraph>=0.2",
  "langchain-xai",
  "pydantic>=2.7",
  "lancedb",
  "mesa",
  "fastapi",
  "uvicorn[standard]",
  "gradio",
  "gitpython",
  "python-dotenv",
  "docker",
  "tenacity",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "pytest>=8.0",
  "pytest-asyncio",
  "mypy>=1.10",
]

[project.scripts]
grok-ceo = "run:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict = true